#557 update jsonUtil tests